samples/_failures_safe/1761182498_a9e0c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8391d6c9.c: In function ‘tokenize’:
./samples/SAFE/__tmp_8391d6c9.c:154:51: error: ‘MAX_TOKEN’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  154 |         strncpy(tokens[token_count].value, "EOF", MAX_TOKEN
      |                                                   ^~~~~~~~~
      |                                                   MAX_TOKENS
./samples/SAFE/__tmp_8391d6c9.c:154:51: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_8391d6c9.c:154:60: error: expected ‘)’ at end of input
  154 |         strncpy(tokens[token_count].value, "EOF", MAX_TOKEN
      |                ~                                           ^
      |                                                            )
./samples/SAFE/__tmp_8391d6c9.c:154:9: error: expected declaration or statement at end of input
  154 |         strncpy(tokens[token_count].value, "EOF", MAX_TOKEN
      |         ^~~~~~~
./samples/SAFE/__tmp_8391d6c9.c:154:9: error: expected declaration or statement at end of input
